***********************************
CHANGES IN VERSION 2.10.0

NEW FEATURES

SIGNIFICANT USER-VISIBLE CHANGES

   o udpate R scripts to be compatible with the lastest ggplot2 version (>2.2.1)

BUG FIXES

   o fix bugs in plots of no trans interactions were detected

   o fix bug in split_reads.py when -o is specified

   o fix issue in hicpro2juicebox.sh. The first column was duplicated, and position are now 1-based

   o fix bug in ice_norm.sh when HiC-Pro is run with -s ice_norm option

***********************************
CHANGES IN VERSION 2.9.0

NEW FEATURES

   o update iced_0.4.2

SIGNIFICANT USER-VISIBLE CHANGES

   o Fix issues with floating values in hicpro2fithic.py (F. Ay)

   o Update hicpro2fithic.py script. New '-r' option to set up the data resolution (F. Ay)

   o samtools >1.0 is now required

   o The -s build_contact_maps option now  directly creates matrix files from .allValidPairs file. It does not merge the .validPairs anymore. Please use -s merge_persample to merge .validPairs files and remove duplicates.

   o Update manual and correct errors

BUG FIXES

   o Fix bug for SLURM support
   
   o Fix python path in merge_valid_interaction.sh

   o Fix bug in hicpro2juicebox when chromosome names have "_"

   o Fix a bug in detection of religation events

   o Fix some issue with sort -T. This option is no longer used and replaced by setting the TMPDIR variable

***********************************
CHANGES IN VERSION 2.8.0

NEW FEATURES

   o Return bias vector after IC normalization

   o New utils hicpro2fithic.py to convert HiC-Pro output into fitHiC input

SIGNIFICANT USER-VISIBLE CHANGES

   o Update iced version (-> 0.4.0). This version includes a major changes on matrix filtering before iced normalization

   o sparseToDense.py utils. Create output file in the current folder by default
   
BUG FIXES

   o Fix bug in the help message of digest_genome.py

***********************************
CHANGES IN VERSION 2.7.9

NEW FEATURES
